--- a/dir/.js/index.html
+++ b/dir/.js/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript tutorial</title>
+    <title id="site_titel">javascript tutorial</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id="titel_1">Hi, User!</h1>
+    <h2>This is the HTML Website for this javascript tutorial</h2>
+    <h4 id="change_1">javascript is = Java</h4>
+
+    <input type="text" id="Input_1">
+    <button onclick="getValue()">Whats your Name?</button>
+
     <script src="main.js"></script>
 </body>
 </html>
