--- a/dir/.js/index.html
+++ b/dir/.js/index.html
@@ -15,6 +15,31 @@
     <input type="text" id="Input_1">
     <button onclick="getValue()">Whats your Name?</button>
 
+    <div>
+        <br>
+        <style id="style_1" style="display: block;">
+            body {
+                background-color: aliceblue;
+            }
+        </style>
+        <div id="button" >
+            <button onclick="change_back()">change background-color</button>
+        </div>
+    </div>
+
+    <div class="change_to_self">
+        <textarea name="" id="Input_3" cols="50" rows="6">
+        <style id="style_2" style="display: block;">
+            .change_to_self {
+
+            }
+        </style>
+        </textarea>
+        <br>
+        <button onclick="change_to_self()">safe</button>
+    </div>
+
     <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
