--- a/dir/depression/index.html
+++ b/dir/depression/index.html
@@ -3,12 +3,20 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="main.js"></script>
+  <style id="main_style">
+
+  </style>
 </head>
 <body>
-  <div class="overlay">
+  <div id="wrapper" class="wrapper">
+  <div class="wrapper" id="main">
     <h1 id="movable-text">DEPRESSED</h1>
+    <h2 id="start-coding-text">?</h2>
+    <img class="bottom-img-before" src="images/bottom-img-before.png" alt="">
+  </div>
   </div>
 
   <script src="main.js"></script>
 </body>
 </html>
+
